--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="App Download">
       <div class="container">
         <div class="box">
-          <h1>IOS App</h1>
+          <h1>iOS App</h1>
           <a
             href="https://apps.apple.com/us/app/shuttle-tracker/id1583503452?itsct=apps_box_badge&amp;itscg=30200"
             style="
