Addes Section for: Why Crowdsourcing

--- a/index.html
+++ b/index.html
@@ -33,6 +33,18 @@
         <img src="img/map.png" alt="Shuttle map" width="40%" />
       </div>
     </section>
+
+    <section id="Why Crowdsource?">
+      <div class="container">
+        <h1>Why Crowdsource?</h1>
+        <p>
+          RPI bad. Student good. Phone useful. Use phone to track shuttle. Use phone location data
+          to track shuttle while you're on it. Nothing stored. We make no money. Not even Shirley pays us.
+          o wells
+        </p>
+      </div>
+      <img src="img/bus.jpg" alt="Shuttle map" width="40%" />
+    </section>
     <section id="App Download">
       <div class="container">
         <div class="box">
