--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shuttle Tracker | Home</title>
+    <title>Shuttle Tracker | About</title>
   </head>
 
   <body>
     <header>
       <div class="container">
-        <div id="Logo branding">
+        <div id="branding">
           <h1>Shuttle Tracker</h1>
         </div>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>Map</li>
+            <li><a href="index.html">About</a></li>
+            <li><a href="index.html">Map</a></li>
           </ul>
         </nav>
       </div>
@@ -24,13 +24,14 @@
 
     <section id="About">
       <div class="container">
+        <img src="img/map.png" alt="Shuttle map" />
+        <h1>Welcome to Shuttle tracker</h1>
         <p>
           Shuttle Tracker Lorem Ipsum is simply dummy text of the printing and
           typesetting industry. Lorem Ipsum has been the industry's standard
           dummy text ever since the 1500s, when an unknown printer took a galley
           of type and scrambled it to make a type specimen book
         </p>
-        <img src="img/map.png" alt="Shuttle map" width="40%" />
       </div>
     </section>
 
@@ -42,8 +43,8 @@
           to track shuttle while you're on it. Nothing stored. We make no money. Not even Shirley pays us.
           o wells
         </p>
+        <img src="img/bus.jpg" alt="Shuttle map" width="30%" />
       </div>
-      <img src="img/bus.jpg" alt="Shuttle map" width="40%" />
     </section>
     <section id="App Download">
       <div class="container">
@@ -71,3 +72,73 @@
     </section>
   </body>
 </html>
+
+
+<style>
+ body {
+  font-family: Arial,Helvetica, sans-serif;
+  padding:0;
+  margin:0;
+  background-color: #f4f4f4;
+ } 
+
+ /* Global */
+ .container {
+   margin: auto;
+   width: 80%;
+   overflow: hidden;
+ }
+
+
+ /* Header */
+ header{
+   background: #EBEBEB;
+   color: #494D50;
+   padding-top: 30px;
+   min-height: 70px;
+ }
+ header a{
+   font-size: 20px;
+   text-decoration: none;
+   color: #494D50;
+ }
+
+ header ul{
+   margin:0;
+   padding:0;
+ }
+
+ header li{
+   float: left;
+   display: inline;
+   padding: 0 20px 0 20px;
+ }
+
+ header #branding{
+   float: left;
+ }
+
+ header #branding h1{
+   margin:0;
+   padding:0;
+ }
+
+ header nav{
+   float: right;
+   margin-top: 10px;
+ }
+
+ /* Intro */
+#About{
+  margin-top: 10px;
+ }
+
+ #About img{
+  width: 60%;
+  float: left;
+  padding-right: 10px;
+  min-width: 505px;
+ }
+
+
+</style>
