--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
         </div>
         <div class="box">
           <h1>Android App</h1>
+          <a href='https://play.google.com/store/apps/details?id=edu.rpi.shuttletracker&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+           
+            <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
+            style="border-radius: 0px; width: 260px; height: 100px"/>
+          </a>
         </div>
       </div>
     </section>
