--- a/index.html
+++ b/index.html
@@ -46,34 +46,35 @@
         </p>
       </div>
     </section>
-    <section id="App Download">
-      <div class="container">
-        <div class="box">
-          <h1>iOS App</h1>
-          <a
-            href="https://apps.apple.com/us/app/shuttle-tracker/id1583503452?itsct=apps_box_badge&amp;itscg=30200"
-            style="
-              display: inline-block;
-              overflow: hidden;
-              border-radius: 13px;
-              width: 250px;
-              height: 83px;
-            "
-            ><img
-              src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1636675200&h=813ef6710e3198f136f0b71c7200df9a"
-              alt="Download on the App Store"
-              style="border-radius: 13px; width: 250px; height: 83px"
-          /></a>
-        </div>
-        <div class="box">
-          <h1>Android App</h1>
-          <a href='https://play.google.com/store/apps/details?id=edu.rpi.shuttletracker&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-           
-            <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
-            style="border-radius: 0px; width: 260px; height: 100px"/>
-          </a>
-        </div>
+    <section id="App-Download">
+      <div>
+        <h1 style="text-align:center">Get the App</h1>
       </div>
+        <div id = "wrap">
+          <div class="box">
+            <a
+              href="https://apps.apple.com/us/app/shuttle-tracker/id1583503452?itsct=apps_box_badge&amp;itscg=30200"
+              style="
+                display: inline-block;
+                overflow: hidden;
+                border-radius: 13px;
+                width: 250px;
+                height: 83px;
+              "
+              ><img
+                src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1636675200&h=813ef6710e3198f136f0b71c7200df9a"
+                alt="Download on the App Store"
+                style="border-radius: 13px; width: 250px; height: 83px"
+            /></a>
+          </div>
+          <div class="box">
+            <a href='https://play.google.com/store/apps/details?id=edu.rpi.shuttletracker&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+             
+              <img alt='Get it on Google Play' src='https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png'
+              style="border-radius: 0px; width: 260px; height: 100px"/>
+            </a>
+          </div>
+        </div>
     </section>
   </body>
 </html>
@@ -157,4 +158,15 @@
   width: 20%;
 }
 
+#App-Download #wrap {
+    background: #ff8989;
+    display: flex;
+    justify-content: center;
+    padding: 5%;  
+}
+
+#App-Download .box {
+  display: inline-block; 
+  padding: 20px;
+}
 </style>
