--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
       </div>
     </section>
     <section id="App-Download">
-      <div>
-        <h1 style="text-align:center">Get the App</h1>
-      </div>
+        <div id="Download-Message">
+          <h1 style="text-align:center">Get the App</h1>
+          <p>Get shuttle tracker right on your mobile device. Help crowdsource blah blah</p>
+        </div>    
         <div id = "wrap">
           <div class="box">
             <a
@@ -58,13 +59,14 @@
                 display: inline-block;
                 overflow: hidden;
                 border-radius: 13px;
-                width: 250px;
-                height: 83px;
+                width: 205px;
+                height: 68px;
+                margin-top: 15px;
               "
               ><img
                 src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1636675200&h=813ef6710e3198f136f0b71c7200df9a"
                 alt="Download on the App Store"
-                style="border-radius: 13px; width: 250px; height: 83px"
+                style="border-radius: 13px; width: 198px; height: 68px; margin-top: 0px;"
             /></a>
           </div>
           <div class="box">
@@ -74,6 +76,7 @@
               style="border-radius: 0px; width: 260px; height: 100px"/>
             </a>
           </div>
+          <img id="iosview" src="/img/iosmobile.PNG" alt="iphone-view">
         </div>
     </section>
   </body>
@@ -158,15 +161,37 @@
   width: 20%;
 }
 
+#App-Download {
+  background: #ff8989;
+}
+
+#App-Download h1{
+  margin: 0;
+  padding: 20px 0 10px 0;
+}
+
 #App-Download #wrap {
-    background: #ff8989;
     display: flex;
     justify-content: center;
-    padding: 5%;  
+    padding: 0;  
 }
 
 #App-Download .box {
   display: inline-block; 
-  padding: 20px;
+  padding: 0 20px 0 20px;
 }
+
+#App-Download #iosview {
+  width: 200px;
+  position: relative;
+  bottom: 55px;
+}
+
+#App-Download #Download-Message {
+  text-align: center;
+  max-width: 350px;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
 </style>
