--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </a>
           </div>
           <img id="iosview" src="/img/iosmobile.PNG" alt="iphone-view">
+          <img id="androidview" src="/img/androidview.webp" alt="android-view">
         </div>
     </section>
   </body>
@@ -153,7 +154,7 @@
   margin-top: 10px;
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: rgb(170, 255, 182);
+  background-color: #f4f4f4;
 }
 #Crowdsource img{
   margin-right: 15px;
@@ -162,7 +163,7 @@
 }
 
 #App-Download {
-  background: #ff8989;
+  background: #f4f4f4;
 }
 
 #App-Download h1{
@@ -185,13 +186,22 @@
   width: 200px;
   position: relative;
   bottom: 55px;
+  border-radius: 20px;
+  left:30px;
+}
+
+#App-Download #androidview {
+  width: 200px;
+  position: relative;
+  bottom: 55px;
+  border-radius: 20px;
+  left:40px;
 }
 
 #App-Download #Download-Message {
   text-align: center;
   max-width: 350px;
-  margin-left: 30%;
-  margin-right: 30%;
+  margin-left: 20%;
 }
 
 </style>
