--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
 #App-Download {
   background: #f4f4f4;
+  margin-top: 55px;
 }
 
 #App-Download h1{
@@ -185,7 +186,7 @@
 #App-Download #iosview {
   width: 200px;
   position: relative;
-  bottom: 55px;
+  bottom: 150px;
   border-radius: 20px;
   left:30px;
 }
@@ -193,7 +194,7 @@
 #App-Download #androidview {
   width: 200px;
   position: relative;
-  bottom: 55px;
+  bottom: 150px;
   border-radius: 20px;
   left:40px;
 }
