--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="PageStyling.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -26,18 +27,21 @@
       <div class="container">
         <img src="img/map.png" alt="Shuttle map" />
         <h1>Welcome to Shuttle tracker</h1>
+        <div class ="text">
         <p>
           Shuttle Tracker Lorem Ipsum is simply dummy text of the printing and
           typesetting industry. Lorem Ipsum has been the industry's standard
           dummy text ever since the 1500s, when an unknown printer took a galley
           of type and scrambled it to make a type specimen book
         </p>
+        </div>
       </div>
     </section>
 
     <section id="Crowdsource">
-      <div class="container">
+      <div id="wrap2">
         <img src="img/bus.jpg" alt="Shuttle map" width="30%" />
+        <div id="text">
         <h1>Why Crowdsource?</h1>
         <p>
           RPI bad. Student good. Phone useful. Use phone to track shuttle. Use phone location data
@@ -45,11 +49,11 @@
           o wells
         </p>
       </div>
+      </div>
     </section>
-    <section id="App-Download">
-  
-      <div id = "wrap">
 
+    <section id="App-Download">
+      <div id = "wrap">
         <div class = "Column-container">
             <div id="Download-Message">
               <h1 style="text-align:center">Get the App</h1>
@@ -106,7 +110,6 @@
    overflow: hidden;
  }
 
-
  /* Header */
  header{
    background: #EBEBEB;
@@ -158,15 +161,30 @@
  }
 
 #Crowdsource {
-  margin-top: 10px;
+  justify-content: center;
+  padding: 0;
+  margin-top: 50px;
   padding-top: 15px;
   padding-bottom: 15px;
+  left: 20px;
   background-color: #f4f4f4;
 }
+
+#Crowdsource #wrap2 {
+  display: flex;
+  justify-content: center;
+  padding: 0;  
+}
+
 #Crowdsource img{
   margin-right: 15px;
   float: left;
   width: 20%;
+}
+
+#Crowdsource #text{
+  width: 65%;
+  justify-content: center;
 }
 
 #App-Download {
