--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
 #App-Download {
   background: #f4f4f4;
   margin-top: 55px;
+  margin-bottom: 55px;
 }
 
 #App-Download h1{
@@ -183,6 +184,7 @@
     display: flex;
     justify-content: center;
     padding: 0;  
+    flex-wrap: wrap;
 }
 
 #App-Download .box {
@@ -215,6 +217,7 @@
   flex-direction: row;
   flex-flow: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .Column-container {
