Rewrote About section css to use flexbox, added UIstyling

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </header>
 
     <section id="About">
-      <div class="container">
+      <div class="Two-row-container">
         <img src="img/map.png" alt="Shuttle map" />
-        <h1>Welcome to Shuttle tracker</h1>
         <div class ="text">
-        <p>
-          Shuttle Tracker Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry. Lorem Ipsum has been the industry's standard
-          dummy text ever since the 1500s, when an unknown printer took a galley
-          of type and scrambled it to make a type specimen book
-        </p>
+          <h1>Welcome to Shuttle tracker</h1>
+          <p>
+            Shuttle Tracker Lorem Ipsum is simply dummy text of the printing and
+            typesetting industry. Lorem Ipsum has been the industry's standard
+            dummy text ever since the 1500s, when an unknown printer took a galley
+            of type and scrambled it to make a type specimen book
+          </p>
         </div>
       </div>
     </section>
