align download buttons

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                   width: 205px;
                   height: 68px;
                   margin-top: 15px;
+                  margin-bottom: 12px;
                 "
                 ><img
                   src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us?size=250x83&amp;releaseDate=1636675200&h=813ef6710e3198f136f0b71c7200df9a"
