Created flexbox area to insert images and text to describe features of Shuttle Tracker

--- a/index.html
+++ b/index.html
@@ -57,6 +57,35 @@
       </div>
     </section>
 
+    <section id="Features">
+      <div id="wrap">
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <p>insert text</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <p>insert text</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <p>insert text</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <p>insert text</p>
+        </div>
+        </div>
+      </div>
+    </section>
+
     <section id="App-Download">
       <div id = "wrap">
         <div class = "Column-container">
