added two images for feature bar,linked the images in the html

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     <section id="Features">
       <div id="wrap">
         <div class="Column-container">
-          <img src="img/mstile-150x150.png">
+          <img src="img/greenbus.png">
           <div id="Details">
           <p>insert text</p>
         </div>
         </div>
         <div class="Column-container">
-          <img src="img/mstile-150x150.png">
+          <img src="img/mobile-icon.webp">
           <div id="Details">
           <p>insert text</p>
         </div>
