--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
-          <p>insert text</p>
+          <p>free pizza</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
-          <p>insert text</p>
+          <p>submitty duck</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
-          <p>insert text</p>
+          <p>bababooey</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
-          <p>insert text</p>
+          <p>frank sinatra</p>
         </div>
         </div>
       </div>
