Added more placeholders/titles to Features Bar, Moved it above Crowdsource info

--- a/index.html
+++ b/index.html
@@ -43,6 +43,45 @@
       </div>
     </section>
 
+    <section id="Features">
+      <div id="wrap">
+        <div class="Column-container">
+          <img src="img/greenbus.png">
+          <div id="Details">
+          <h2>Crowdsource</h2>
+          <p>u work not us LUL</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mobile-icon.webp">
+          <div id="Details">
+          <h2>Native Mobile Apps</h2>
+          <p>Ensuring a smoother, more stable expeirence.</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <h2>Website Support</h2>
+          <p>bababooey</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <h2>Announcements</h2>
+          <p>frank sinatra</p>
+        </div>
+        </div>
+        <div class="Column-container">
+          <img src="img/mstile-150x150.png">
+          <div id="Details">
+          <h2>Community Milestones</h2>
+          <p>TBD</p>
+        </div>
+      </div>
+    </section>
+
     <section id="Crowdsource">
       <div id="wrap2">
         <img src="img/bus.jpg" alt="Shuttle map" width="30%" />
@@ -53,35 +92,6 @@
             to track shuttle while you're on it. Nothing stored. We make no money. Not even Shirley pays us.
             o wells
           </p>
-        </div>
-      </div>
-    </section>
-
-    <section id="Features">
-      <div id="wrap">
-        <div class="Column-container">
-          <img src="img/greenbus.png">
-          <div id="Details">
-          <p>free pizza</p>
-        </div>
-        </div>
-        <div class="Column-container">
-          <img src="img/mobile-icon.webp">
-          <div id="Details">
-          <p>submitty duck</p>
-        </div>
-        </div>
-        <div class="Column-container">
-          <img src="img/mstile-150x150.png">
-          <div id="Details">
-          <p>bababooey</p>
-        </div>
-        </div>
-        <div class="Column-container">
-          <img src="img/mstile-150x150.png">
-          <div id="Details">
-          <p>frank sinatra</p>
-        </div>
         </div>
       </div>
     </section>
