Styled feture bar, removed unnecesarry CSS

--- a/index.html
+++ b/index.html
@@ -48,36 +48,37 @@
         <div class="Column-container">
           <img src="img/greenbus.png">
           <div id="Details">
-          <h2>Crowdsource</h2>
-          <p>u work not us LUL</p>
-        </div>
+              <h2>Crowdsource</h2>
+              <p>Accuracy. Privacy. Supported in our mobile apps.
+              </p>
+          </div>
         </div>
         <div class="Column-container">
           <img src="img/mobile-icon.webp">
           <div id="Details">
           <h2>Native Mobile Apps</h2>
-          <p>Ensuring a smoother, more stable expeirence.</p>
+          <p>Ensure a smooth, stable expeirence. Supporting iOS and Android.</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
           <h2>Website Support</h2>
-          <p>bababooey</p>
+          <p>Support live shuttle tracking service on the web.</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
           <h2>Announcements</h2>
-          <p>frank sinatra</p>
+          <p>Get the latest annoucements on shuttle schedules, holidays hours and more.</p>
         </div>
         </div>
         <div class="Column-container">
           <img src="img/mstile-150x150.png">
           <div id="Details">
           <h2>Community Milestones</h2>
-          <p>TBD</p>
+          <p>Monthly ride milstones with special easter eggs</p>
         </div>
       </div>
     </section>
