--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 
   <body>
     <header>
-      <div class="container">
-        <img src="img/mstile-150x150.png">
-
-        <div id="branding">
+        <div  id="Branding">
+          <img src="img/mstile-150x150.png">
           <h1>Shuttle Tracker</h1>
         </div>
         <nav>
@@ -22,7 +20,6 @@
             <li><a href="index.html">Map</a></li>
           </ul>
         </nav>
-      </div>
     </header>
 
     <section id="About">
