Redesigned about section, added animations to buttons

--- a/index.html
+++ b/index.html
@@ -18,26 +18,21 @@
           <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="index.html">Map</a></li>
+            <li><a href="index.html">Donate to Shirley</a></li>
           </ul>
         </nav>
     </header>
 
     <section id="About">
-      <div class="Two-row-container">
-        <img src="img/map.png" alt="Shuttle map" />
         <div class ="text">
-          <h1>Welcome to Shuttle tracker</h1>
-          <p>
-            Shuttle Tracker Lorem Ipsum is simply dummy text of the printing and
-            typesetting industry. Lorem Ipsum has been the industry's standard
-            dummy text ever since the 1500s, when an unknown printer took a galley
-            of type and scrambled it to make a type specimen book
+          <h1 style="font-size: 50px;">Shuttle Tracker</h1>
+          <p style="font-size: 20px;">
+            The Official Shuttle Tracking Service of Rensselaer Polytechnic Institute
           </p>
           <button>
             <a href="https://web.shuttletracker.app/">Launch Shuttle Tracker</a>
           </button>
         </div>
-      </div>
     </section>
 
     <section id="Features">
@@ -68,7 +63,7 @@
           <img src="img/mstile-150x150.png">
           <div id="Details">
           <h2>Announcements</h2>
-          <p>Get the latest annoucements on shuttle schedules, holidays hours and more.</p>
+          <p>Get the latest annoucements on holidays hours and more.</p>
         </div>
         </div>
         <div class="Column-container">
