Added button to scroll to App Downloads

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <ul>
             <li><a href="index.html">About</a></li>
             <li><a href="index.html">Map</a></li>
-            <li><a href="index.html">Donate to Shirley</a></li>
+            <li><a href="https://admissions.rpi.edu/undergraduate">Donate to Shirley</a></li>
           </ul>
         </nav>
     </header>
@@ -31,6 +31,9 @@
           </p>
           <button>
             <a href="https://web.shuttletracker.app/">Launch Shuttle Tracker</a>
+          </button>
+          <button>
+            <a href="#App-Download">Download Our App</a>
           </button>
         </div>
     </section>
