--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <p style="font-size: 20px;">
             The Official Shuttle Tracking Service of Rensselaer Polytechnic Institute
           </p>
-          <button>
+          <button id="web-button">
             <a href="https://web.shuttletracker.app/">Launch Shuttle Tracker</a>
           </button>
-          <button>
+          <button id="app-button">
             <a href="#App-Download">Download Our App</a>
           </button>
         </div>
