add laptop logo into button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           </p>
           <button id="web-button">
             <a href="https://web.shuttletracker.app/">Launch Shuttle Tracker</a>
+            <img src="./img/laptop-icon.png" style="width: 30px; vertical-align: middle;" alt="uh oh">
           </button>
           <button id="app-button">
             <a href="#App-Download">Download Our App</a>
