--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li><a href="index.html">About</a></li>
-            <li><a href="index.html">Map</a></li>
+            <li><a href="https://web.shuttletracker.app/">Map</a></li>
             <li><a href="https://admissions.rpi.edu/undergraduate">Donate to Shirley</a></li>
           </ul>
         </nav>
