Added section detailing new shutle tracker plans

--- a/index.html
+++ b/index.html
@@ -79,6 +79,21 @@
       </div>
     </section>
 
+    <section id="NewTrackingSection">
+      <div id="wrap">
+        <div id="text">
+          <h1>NEW! Enhanced Tracking </h1>
+          <p>
+            With cooperation from Student Government and the Auxiliary, Parking, &
+            Transportation Services Department, Shuttle Tracker is aiming to reach 100% tracking Accuracy
+            with new tracking tools for shuttle drivers to provide more accurate locations.<br> Coming soon&trade; to a 
+            shuttle stop near you.
+          </p>
+        </div>
+        <img src="img/phone.jpg" alt="Holding a Phone" width="20%" height="100%"/>
+      </div>
+    </section>
+  
     <section id="Crowdsource">
       <div id="wrap2">
         <img src="img/bus.jpg" alt="Shuttle map" width="30%" />
